resolved spacing issues

--- a/asset/style/style.css
+++ b/asset/style/style.css
@@ -673,6 +673,7 @@ html {
 
 .footer-bottom p {
   margin: 0;
+  color: #ccc;
 }
 
 .category-header {
